# personal-coach

./: .gitignore  AGENTS.md  ASHIM-AHMAD.docx  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  automation.txt  calc-load_decoded.xlsx  demo-template.xlsx  improvement.md  opencode.json  prompt-engineer.txt  pyproject.toml  start-session.ps1  test.txt
.github/workflows/: ci.yml  deploy-starfoxsecu.yml
Secuview-Work/: 2026-04-28.md  API.md  Daily Work Update - 04-05-2026.md  Daily Work Update - 13-5-2026.md  Daily Work Update - 17-5-2026.md  Daily Work Update 20-5-2026.md  Daily work Update 18-5-2026.md  Daily work Update.md  SEO keywords.md  Secuview Blog.md  home-wifi-starter-kit-promotional-blog.md  secuview-blog-complete-home-security-qatar.md
coach/: agent.py  anki_cards.apkg  anki_cards.json  anki_export.py  coach_identity.md  config.yaml  memory_manager.py  prompts.py  requirements.txt  user-manual.md
coach/memory/: checkpoint.md  decisions.md  evolution_suggestions.md  goals.md  habits.md  insight_ledger.json  insights.md  latest_learnings.md  local-backup.patch  meta.md  observations.jsonl  patterns.md  profile.md  rates.json  reflections.jsonl  resources.md  site_surveys.md  tasks.md
coach/tests/: test_insight_ledger.py  test_recap.py  test_seo_audit.py  test_session_hooks.py
coach/tools/: ANCHORED_SUMMARY.md  add_goal.py  add_habit.py  ask_memory.py  autofix.py  backup_memory.py  content_factory.py  daily_review.py  db.py  debate.py  deep_research.py  evolve_skill.py  export_anki.py  (+34 more)
quotation-coach/: AGENTS.md  opencode.json
starfoxsecu/: hugo.toml
(+416 files in other folders)
